[package]
name = "mcp-arxiv-server"
version = "0.1.0"
edition = "2024"

[dependencies]
rmcp = { version = "1.5", features = ["server", "transport-io", "macros"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
quick-xml = "0.37"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }